added data concurrency, updated to vs2022, updated version

--- a/DGUIGHFSample/App.config
+++ b/DGUIGHFSample/App.config
@@ -11,11 +11,12 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="dguighftestEntities" connectionString="" providerName="System.Data.EntityClient" />
+    <add name="dguighfsamplemodelContext" connectionString="" providerName="System.Data.EntityClient" />
   </connectionStrings>
-	<appSettings>
-		<add key="stacktracerSenderFrom" value="Customer Name"></add>
+  <appSettings>
+    <add key="stacktracerSenderFrom" value="Customer Name"></add>
     <add key="language" value="entst"></add>
-    <add key="dguighftestConnectionString" value="" />
-	</appSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" /></startup></configuration>
+    <add key="dguighfsamplemodelConnectionString" value="" />
+    <add key="dataconcurrencyhelperConnectionString" value=""/>
+  </appSettings>
+</configuration>
