--- a/DGUIGHFSample/DGUIGHFSample.csproj
+++ b/DGUIGHFSample/DGUIGHFSample.csproj
@@ -1,20 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk;Microsoft.NET.Sdk.Publish">
   <PropertyGroup>
-    <TargetFrameworks>net45;net5.0-windows</TargetFrameworks>
+    <TargetFrameworks>net452;netcoreapp3.1;net5.0-windows;net6.0-windows;net7.0-windows;net8.0-windows</TargetFrameworks>
     <OutputType>WinExe</OutputType>
     <RootNamespace>DG.UIGHFSample</RootNamespace>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
     <UseWindowsForms>true</UseWindowsForms>
     <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
-    <Version>1.2.27928.17</Version>
+    <Version>1.2.30204.18</Version>
     <Title>DGUIGHF Sample</Title>
     <Product>DGUIGHF Sample</Product>
     <Authors>Davide Gironi</Authors>
     <Company>DG</Company>
     <Copyright>Copyright (c) Davide Gironi, 2014</Copyright>
-    <XmlTransformDllPath Condition="'$(XmlTransformDllPath)' == '' AND '$(MSBuildRuntimeType)' == 'core'">$(MSBuildSDKsPath)/Microsoft.NET.Sdk.Publish/tools/net5.0/Microsoft.NET.Sdk.Publish.Tasks.dll</XmlTransformDllPath>
-    <XmlTransformDllPath Condition="'$(XmlTransformDllPath)' == '' AND '$(MSBuildRuntimeType)' != 'core'">$(MSBuildSDKsPath)/Microsoft.NET.Sdk.Publish/tools/net472/Microsoft.NET.Sdk.Publish.Tasks.dll</XmlTransformDllPath>
-    <XmlTransformDllPath Condition="!Exists($(XmlTransformDllPath))">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\Web\Microsoft.Web.Publishing.Tasks.dll</XmlTransformDllPath>
     <ApplicationIcon>ico_window.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
@@ -34,55 +31,65 @@
     <EmbeddedResource Include="splashscreen_logo.png" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="DG.DataModel" Version="1.2.30116.12" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\DGUIGHFSampleModel\DGUIGHFSampleModel.csproj" />
     <ProjectReference Include="..\DGUIGHF\DGUIGHF.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\DGUIGHFSampleModelEntityNetFramework\DGUIGHFSampleModelEntityNetFramework.csproj" Condition="'$(TargetFramework)' == 'net452'" />
+    <ProjectReference Include="..\DGUIGHFSampleModelEntityNetCore\DGUIGHFSampleModelEntityNetCore.csproj" Condition="'$(TargetFramework)' == 'netcoreapp3.1'" />
     <ProjectReference Include="..\DGUIGHFSampleModelEntityNetCore\DGUIGHFSampleModelEntityNetCore.csproj" Condition="'$(TargetFramework)' == 'net5.0-windows'" />
-    <ProjectReference Include="..\DGUIGHFSampleModelEntityNetFramework\DGUIGHFSampleModelEntityNetFramework.csproj" Condition="'$(TargetFramework)' == 'net45'" />
+    <ProjectReference Include="..\DGUIGHFSampleModelEntityNetCore\DGUIGHFSampleModelEntityNetCore.csproj" Condition="'$(TargetFramework)' == 'net6.0-windows'" />
+    <ProjectReference Include="..\DGUIGHFSampleModelEntityNetCore\DGUIGHFSampleModelEntityNetCore.csproj" Condition="'$(TargetFramework)' == 'net7.0-windows'" />
+    <ProjectReference Include="..\DGUIGHFSampleModelEntityNetCore\DGUIGHFSampleModelEntityNetCore.csproj" Condition="'$(TargetFramework)' == 'net8.0-windows'" />
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'net45'">
+  <ItemGroup Condition="'$(TargetFramework)' == 'net452'">
     <Reference Include="System.Configuration" />
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Security" />
     <Reference Include="System.Web.Extensions" />
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'net45'">
-    <PackageReference Include="EntityFramework" Version="6.1.3" />
+  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1'">
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)' == 'net5.0-windows'">
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.8" />
-    <PackageReference Include="Microsoft.Extensions.Hosting">
-      <Version>5.0.0</Version>
-    </PackageReference>
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
   </ItemGroup>
-  <ItemGroup>
-    <Reference Include="DGDataModel">
-      <HintPath Condition="'$(TargetFramework)' == 'net5.0-windows'">..\packages\Ext\DGDataModel\netcoreapp3.1\DGDataModel.dll</HintPath>
-      <HintPath Condition="'$(TargetFramework)' == 'net45'">..\packages\Ext\DGDataModel\net40\DGDataModel.dll</HintPath>
-    </Reference>
+  <ItemGroup Condition="'$(TargetFramework)' == 'net6.0-windows'">
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
   </ItemGroup>
-  <Choose>
-    <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
-      <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.CodedUITestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-          <Private>False</Private>
-        </Reference>
-        <Reference Include="Microsoft.VisualStudio.TestTools.UITest.Common, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-          <Private>False</Private>
-        </Reference>
-        <Reference Include="Microsoft.VisualStudio.TestTools.UITest.Extension, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-          <Private>False</Private>
-        </Reference>
-        <Reference Include="Microsoft.VisualStudio.TestTools.UITesting, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-          <Private>False</Private>
-        </Reference>
-      </ItemGroup>
-    </When>
-  </Choose>
-  <UsingTask TaskName="TransformXml" AssemblyFile="$(XmlTransformDllPath)" />
-  <Target Name="ApplyConfigurationConfigFile" AfterTargets="PrepareForBuild">
+  <ItemGroup Condition="'$(TargetFramework)' == 'net7.0-windows'">
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-windows'">
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'net452'">
+    <PackageReference Include="EntityFramework" Version="6.0.0" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1'">
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'net5.0-windows'">
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'net6.0-windows'">
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'net7.0-windows'">
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-windows'">
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+  </ItemGroup>
+  <Target Name="ApplyConfigurationConfigFile" AfterTargets="PrepareForBuild" Condition="Exists('App.$(Configuration).config')">
     <ItemGroup>
       <AppConfigWithTargetPath Remove="App.config" />
       <AppConfigWithTargetPath Include="$(IntermediateOutputPath)$(TargetFileName).config">
