--- a/DGUIGHFSampleModel/DGUIGHFSampleModel.csproj
+++ b/DGUIGHFSampleModel/DGUIGHFSampleModel.csproj
@@ -1,31 +1,46 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net40;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net452;netcoreapp3.1;net5.0;net6.0;net7.0;net8.0</TargetFrameworks>
     <OutputType>Library</OutputType>
     <RootNamespace>DG.UIGHFSample.Model</RootNamespace>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <Version>1.2.27928.17</Version>
+    <Version>1.2.30204.18</Version>
+    <AssemblyVersion>1.2.30204.18</AssemblyVersion>
+    <FileVersion>1.2.30204.18</FileVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="DG.DataModel" Version="1.2.26020.10" />
+    <PackageReference Include="DG.DataModel" Version="1.2.30116.12" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\DGUIGHFSampleModelEntityNetFramework\DGUIGHFSampleModelEntityNetFramework.csproj" Condition="'$(TargetFramework)' == 'net452'" />
     <ProjectReference Include="..\DGUIGHFSampleModelEntityNetCore\DGUIGHFSampleModelEntityNetCore.csproj" Condition="'$(TargetFramework)' == 'netcoreapp3.1'" />
-    <ProjectReference Include="..\DGUIGHFSampleModelEntityNetFramework\DGUIGHFSampleModelEntityNetFramework.csproj" Condition="'$(TargetFramework)' == 'net40'" />
+    <ProjectReference Include="..\DGUIGHFSampleModelEntityNetCore\DGUIGHFSampleModelEntityNetCore.csproj" Condition="'$(TargetFramework)' == 'net5.0'" />
+    <ProjectReference Include="..\DGUIGHFSampleModelEntityNetCore\DGUIGHFSampleModelEntityNetCore.csproj" Condition="'$(TargetFramework)' == 'net6.0'" />
+    <ProjectReference Include="..\DGUIGHFSampleModelEntityNetCore\DGUIGHFSampleModelEntityNetCore.csproj" Condition="'$(TargetFramework)' == 'net7.0'" />
+    <ProjectReference Include="..\DGUIGHFSampleModelEntityNetCore\DGUIGHFSampleModelEntityNetCore.csproj" Condition="'$(TargetFramework)' == 'net8.0'" />
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'net40'">
+  <ItemGroup Condition="'$(TargetFramework)' == 'net452'">
+    <PackageReference Include="EntityFramework" Version="6.0.0" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'net452'">
     <Reference Include="System.Configuration" />
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Security" />
     <Reference Include="System.Web.Extensions" />
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'net40'">
-    <PackageReference Include="EntityFramework" Version="6.1.3" />
-  </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1'">
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.8" />
-    <PackageReference Include="Microsoft.Extensions.Hosting">
-      <Version>5.0.0</Version>
-    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
   </ItemGroup>
 </Project>
